fix(hubert): vertical align text in input button (#207)

--- a/packages/hubert/src/form/select/select.module.scss
+++ b/packages/hubert/src/form/select/select.module.scss
@@ -21,6 +21,8 @@
       background-color: rgb(var(--lotta-box-background-color));
       font-size: 13.3px;
       cursor: pointer;
+      display: flex;
+      align-items: center;
       &[disabled] {
         border-color: rgb(var(--lotta-disabled-color));
         color: rgb(var(--lotta-disabled-color));
